gtk+4.0 (3.92.1-1) UNRELEASED; urgency=medium

  * New upstream release

 -- Jeremy Bicha <jbicha@debian.org>  Wed, 18 Oct 2017 18:07:11 -0400

gtk+4.0 (3.91.2-1) experimental; urgency=medium

  [ Emilio Pozuelo Monfort ]
  * New major release, GTK+ 4 (beta version). (Closes: #876011)
    Rename everything as appropriate for GTK+ 4.
  * Don't abort on test suite failures.
  * Update symbols. Set all symbols' minimum version to 3.91.2.
  * Update build-dependencies: bump gtk-doc-tools and libglib2.0-dev
    minimum requirement, add libgraphene-1.0-dev and autoreconf-archive.
  * Drop libgail packages, they are no longer built from GTK+ 4.
  * Don't install libgdk-4.so, it has been merged into libgtk-4.so.
  * debian/patches/016_no_offscreen_widgets_grabbing.patch,
    debian/patches/017_no_offscreen_device_grabbing.patch:
    + Removed, obsolete as offscreen widgets are gone in GTK+ 4.
  * debian/patches/022_disable-viqr-im-for-vi-locale.patch:
    + Removed, imported in 2009 with no explanation whatsoever.
  * debian/patches/060_ignore-random-icons.patch:
    + Removed, upstream fixed this differently eons ago (see bgo#451634).
  * debian/patches/018_gdkenumtypes.c_location.patch:
    + Refreshed.
  * debian/libgtk-4-dev.install: don't install aclocal files.
  * debian/libgtk-4-common.install.in: comment out EmojiChooser schema, it's
    not present in 3.91.2 but will be in the next release.
  * Update watch file.
  * Point Vcs-* to experimental.

  [ Jeremy Bicha ]
  * debian/control.in:
    - Build-Depend on libvulkan-dev and sassc
    - Drop Breaks/Replaces not needed after jessie
    - Have libgtk-4-bin and libgtk-4-common and gtk-4-examples depend on
      their gtk3 counterparts until we figure out how to handle the file
      conflicts there. The conflicted files have not changed in gtk4.
      See GNOME bug 774912.
  * Don't build gtk-update-icon-cache; we'll let gtk3 handle that for now

 -- Jeremy Bicha <jbicha@debian.org>  Thu, 21 Sep 2017 17:14:22 -0400