@@ -8,6 +8,7 @@ Build-Depends: debhelper (>= 10.3~),
                dpkg-dev (>= 1.17.14),
                autoconf-archive,
                gtk-doc-tools (>= 1.26),
+               meson (>= 0.42.1),
                pkg-config,
                dbus <!nocheck>,
                gsettings-desktop-schemas <!nocheck>,
