@@ -91,48 +91,42 @@ debian/%: debian/%.in
 
 configure_flags_common = \
 	--libdir=/$(LIBDIR) \
-	--enable-test-print-backend
+	-Denable-test-print-backend=yes
 
 configure_flags_deb = \
-	--enable-broadway-backend \
-	--enable-x11-backend \
-	--enable-gtk-doc \
-	--enable-man \
-	--enable-shared \
-	--enable-introspection \
-	--enable-cloudprint \
-	--disable-static
+	-Denable-broadway-backend=true \
+	-Denable-x11-backend=true \
+	-Ddocumentation=true \
+	-Dman-pages=true \
+	-Dintrospection=true \
+	-Denable-cloudprint-print-backend=yes
 
 ifeq (,$(filter stage1,$(DEB_BUILD_PROFILES)))
-configure_flags_deb += --enable-colord
+configure_flags_deb += -Denable-colord=yes
 else
-configure_flags_deb += --disable-colord
+configure_flags_deb += -Denable-colord=no
 endif
 
 ifeq (linux,$(DEB_HOST_ARCH_OS))
-configure_flags_deb += --enable-wayland-backend
+configure_flags_deb += -Denable-wayland-backend=true
 else
-configure_flags_deb += --disable-wayland-backend
+configure_flags_deb += -Denable-wayland-backend=true
 endif
 
 ifeq ($(filter %-doc,$(binaries)),)
-configure_flags_deb += --disable-gtk-doc --disable-man
+configure_flags_deb += -Ddocumentation=no -Dman-pages=no
 endif
 
 configure_flags_udeb = \
-	--disable-broadway-backend \
-	--disable-wayland-backend \
-	--enable-x11-backend \
-	--disable-introspection \
-	--disable-cloudprint \
-	--disable-colord \
-	--disable-xcomposite \
-	--disable-xdamage \
-	--disable-xfixes \
-	--disable-xrandr
+	-Denable-broadway-backend=false \
+	-Denable-wayland-backend=false \
+	-Denable-x11-backend=true \
+	-Dintrospection=true \
+	-Denable-cloudprint-print-backend=no \
+	-Dcolord=no
 
 %:
-	dh $@ --with gir
+	dh $@ --with gir --buildsystem=meson
 
 override_dh_clean: debian/control
 	# gross kludge to force control generation with the %.in target
@@ -144,9 +138,6 @@ override_dh_clean: debian/control
 
 # Add dependencies to generate files from the debian/*.in ones
 override_dh_auto_build: $(call dh_subst_files,$(binaries))
-
-override_dh_autoreconf:
-	dh_autoreconf "NOCONFIGURE=true ./autogen.sh"
 
 override_dh_auto_configure: debian/control
 	dh_auto_configure \
